# BaKGL

./: .gitignore  CMakeLists.txt  README.MD  Taskfile.yml  build.sh  build_quickjs.sh  bun.lockb  log2.txt  package.json
app/: CMakeLists.txt  README.md  instancing.cpp  js_engine.hpp  main.ts  main3d.cpp  quickjs_cpp_test.cpp  quickjs_test.c
bak/: camera.hpp  imageStore.cpp  textureFactory.cpp
bak/file/: aggregateFileProvider.hpp  fileBuffer.cpp  fileBuffer.hpp  fileProvider.cpp  packedFileProvider.cpp  packedResourceFile.cpp  util.cpp
com/: CMakeLists.txt  js_engine.hpp  js_engine.ts  logger.hpp
com/test/: js_engine_test.cpp  js_engine_test.ts
docs/: TODO.md
docs/AI/2024-11-15 files in bak/: file directory and their purposes.md
docs/AI/templates/: comment structure.txt
gui/: fullMap.hpp  icons.hpp  mainView.hpp
ts/: bmp.ts  consts.ts  main.ts
ts/bak/: dataTags.ts  fmap.ts  image.ts  imageStore.ts  palette.ts  resourceNames.ts  screen.ts  zoneReference.ts
ts/bak/file/: fileBuffer.ts  packedFileProvider.ts  packedResourceFile.ts
ts/binary/: binary.ts
ts/binary/__tests__/: binary.test.js
ts/step1-extract-resrouces/: README.md  bmx.ts  pal.ts  scx.ts
